# pyramid_multiauth

./: .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: publish.yml  test.yml
pyramid_multiauth/: __init__.py  tests.py
src/pyramid_multiauth/: __init__.py
tests/: __init__.py  test_base.py
